--- a/docs-dist/404.html
+++ b/docs-dist/404.html
@@ -11,7 +11,7 @@
       type="image/x-icon"
       href="https://user-images.githubusercontent.com/9554297/83762004-a0761b00-a6a9-11ea-83b4-9c8ff721d4b8.png"
     />
-    <link rel="stylesheet" href="/doc/umi.css" />
+    <link rel="stylesheet" href="/doc/docs-dist/umi.css" />
     <script>
       window.routerBase = "/doc";
     </script>
@@ -33,6 +33,6 @@
   <body>
     <div id="root"></div>
 
-    <script src="/doc/umi.js"></script>
+    <script src="/doc/docs-dist/umi.js"></script>
   </body>
 </html>
